tests/compile_fail/export_text_non_pipeline_misuse.cpp
#include <pb/pipeline.hpp>

struct NotAPipeline {};

int main() {
  (void)pb::to_text<NotAPipeline>();
  return 0;
}
